--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ nav:
         - "Define and use agents": how-to/agents/define_and_use_agents.md
         - "Provide tools with MCP": how-to/agents/provide_mcp_tools.md
         - "Serve agents with A2A": how-to/agents/serve_ragbits_agents.md
+        - "Use post-processors": how-to/agents/use_post_processors.md
       - Guardrails:
         - "Setup guardrails": how-to/guardrails/use_guardrails.md
       - Chatbots:
