--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,7 @@ addopts = [
 addopts = "--import-mode=importlib"
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
+pythonpath = ["./"]
 
 [tool.coverage.run]
 omit = [
