--- a/packages/ragbits/pyproject.toml
+++ b/packages/ragbits/pyproject.toml
@@ -31,7 +31,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
-dependencies = ["ragbits-document-search==1.4.0.dev202512160238", "ragbits-cli==1.4.0.dev202512160238", "ragbits-evaluate==1.4.0.dev202512160238", "ragbits-guardrails==1.4.0.dev202512160238", "ragbits-chat==1.4.0.dev202512160238", "ragbits-core==1.4.0.dev202512160238"]
+dependencies = ["ragbits-agents==1.4.0.dev202512160238", "ragbits-document-search==1.4.0.dev202512160238", "ragbits-cli==1.4.0.dev202512160238", "ragbits-evaluate==1.4.0.dev202512160238", "ragbits-guardrails==1.4.0.dev202512160238", "ragbits-chat==1.4.0.dev202512160238", "ragbits-core==1.4.0.dev202512160238"]
 
 [project.urls]
 "Homepage" = "https://github.com/deepsense-ai/ragbits"
