--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -144,7 +144,10 @@ markdown_extensions:
           class: mermaid
   - admonition
   - pymdownx.superfences
-  - pymdownx.snippets
+  - pymdownx.snippets:
+      base_path:
+        - docs
+        - .
   - pymdownx.inlinehilite
   - attr_list
   - md_in_html
@@ -204,3 +207,5 @@ validation:
   absolute_links: warn
   unrecognized_links: warn
   anchors: warn
+not_in_nav: |
+  _shared/
