Revert "snippet usage for index.md and README.md; ragbits-guardrails added to package contents"
This reverts commit d91685dc5230d58d8b09187609aee007c0ae5642.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -144,10 +144,7 @@ markdown_extensions:
           class: mermaid
   - admonition
   - pymdownx.superfences
-  - pymdownx.snippets:
-      base_path:
-        - docs
-        - .
+  - pymdownx.snippets
   - pymdownx.inlinehilite
   - attr_list
   - md_in_html
@@ -207,5 +204,3 @@ validation:
   absolute_links: warn
   unrecognized_links: warn
   anchors: warn
-not_in_nav: |
-  _shared/
