--- a/packages/ragbits-chat/pyproject.toml
+++ b/packages/ragbits-chat/pyproject.toml
@@ -44,8 +44,8 @@ sql = [
     "sqlalchemy>=2.0.39,<3.0.0",
 ]
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pre-commit~=3.8.0",
     "pytest~=8.3.3",
     "pytest-cov~=5.0.0",
