--- a/packages/ragbits-evaluate/pyproject.toml
+++ b/packages/ragbits-evaluate/pyproject.toml
@@ -45,8 +45,8 @@ relari = [
     "continuous-eval>=0.3.12,<1.0.0",
 ]
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pre-commit~=3.8.0",
     "pytest~=8.3.3",
     "pytest-cov~=5.0.0",
