--- a/packages/ragbits-guardrails/pyproject.toml
+++ b/packages/ragbits-guardrails/pyproject.toml
@@ -44,8 +44,8 @@ openai = [
     "openai>=1.91.0,<2.0.0",
 ]
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pre-commit~=3.8.0",
     "pytest~=8.3.3",
     "pytest-cov~=5.0.0",
