--- a/typescript/ui/package.json
+++ b/typescript/ui/package.json
@@ -30,6 +30,7 @@
     "github-markdown-css": "^5.8.1",
     "idb-keyval": "^6.2.2",
     "immer": "^10.1.1",
+    "isomorphic-dompurify": "^2.18.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
