--- a/.github/workflows/shared-packages.yml
+++ b/.github/workflows/shared-packages.yml
@@ -105,7 +105,7 @@ jobs:
 
 
   tests:
-    name: Run tests
+    name: Run tests (${{ matrix.install-method }}, Python ${{ matrix.python-version }})
     runs-on: ubuntu-latest
     timeout-minutes: 15
     permissions:
@@ -116,6 +116,7 @@ jobs:
       fail-fast: false # do not stop all jobs if one fails
       matrix:
         python-version: [ "3.10", "3.11", "3.12" ]
+        install-method: [ "source", "package" ]
 
     services:
       postgres:
@@ -175,12 +176,30 @@ jobs:
           path: ~/nltk_data
           key: nltk-${{ runner.os }}
 
+      - name: Setup environment from built packages
+        if: matrix.install-method == 'package'
+        run: |
+          # Create a fresh virtual environment
+          uv venv --python ${{ matrix.python-version }}
+
+          uv build "packages/ragbits" --out-dir dist --wheel
+
+          # Install packages with their specific extras
+          uv pip install "$(ls dist/ragbits-*.whl)[a2a,azure,chroma,cli,fastembed,fastembed-gpu,gcs,google-drive,hf,local,logfire,mcp,openai,otel,pgvector,promptfoo,qdrant,ray,relari,s3,sql,unstructured,weaviate]"
+
+          # Install test dependencies
+          uv pip install pytest~=8.3.3 pytest-cov~=5.0.0 pytest-asyncio~=0.24.0 pytest-postgresql~=7.0.1 moto~=4.2.7 aiosqlite~=0.21.0
       - name: Run Tests With Coverage
         run: |
-          # run with coverage to not execute tests twice
-          uv run coverage run -m pytest --postgresql-password postgres -v -p no:warnings --junitxml=report.xml
-          uv run coverage report
-          uv run coverage xml
+          if [ "${{ matrix.install-method }}" = "package" ]; then
+            uv run --no-sync coverage run -m pytest --postgresql-password postgres -v -p no:warnings --junitxml=report.xml
+            uv run --no-sync coverage report
+            uv run --no-sync coverage xml
+          else
+            uv run coverage run -m pytest --postgresql-password postgres -v -p no:warnings --junitxml=report.xml
+            uv run coverage report
+            uv run coverage xml
+          fi
         env:
           GOOGLE_DRIVE_CLIENTID_JSON: ${{ secrets.GOOGLE_DRIVE_CLIENTID_JSON }}
           GOOGLE_SOURCE_UNIT_TEST_FOLDER: ${{ secrets.GOOGLE_SOURCE_UNIT_TEST_FOLDER }}
@@ -192,17 +211,19 @@ jobs:
         if: always()
         with:
           report_paths: 'report.xml'
+          check_name: 'Test Results (${{ matrix.install-method }}, Python ${{ matrix.python-version }})'
 
       - name: Publish Test Report
         uses: actions/upload-artifact@v4
         continue-on-error: true
         if: always()
         with:
-          name: test-report
+          name: test-report-${{ matrix.install-method }}-py${{ matrix.python-version }}
           path: report.xml
           retention-days: 10
 
       - name: Produce the coverage report
+        if: matrix.install-method == 'source'
         uses: insightsengineering/coverage-action@v2
         continue-on-error: true
         with:
