--- a/packages/ragbits-core/pyproject.toml
+++ b/packages/ragbits-core/pyproject.toml
@@ -73,6 +73,10 @@ logfire = [
     "logfire[system-metrics]>=3.19.0,<4.0.0",
     "opentelemetry-api>=1.27.0,<2.0.0",
 ]
+phoenix = [
+    "arize-phoenix>=4.0.0,<5.0.0",
+    "openinference-instrumentation>=0.1.0,<1.0.0",
+]
 qdrant = [
     "qdrant-client>=1.12.1,<2.0.0",
 ]
