--- a/packages/ragbits-document-search/pyproject.toml
+++ b/packages/ragbits-document-search/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
-dependencies = ["docling>=2.15.1,<3.0.0", "opencv-python>=4.11.0.86,<5.0.0.0", "rerankers>=0.6.1,<1.0.0", "filetype>=1.2.0,<2.0.0", "python-pptx>=1.0.0,<2.0.0", "ragbits-core==1.4.0.dev202601010248"]
+dependencies = ["docling[easyocr]>=2.15.1,<3.0.0", "opencv-python>=4.11.0.86,<5.0.0.0", "rerankers>=0.6.1,<1.0.0", "filetype>=1.2.0,<2.0.0", "python-pptx>=1.0.0,<2.0.0", "ragbits-core==1.4.0.dev202601010248"]
 
 [project.urls]
 "Homepage" = "https://github.com/deepsense-ai/ragbits"
