linked package installation

--- a/.github/workflows/shared-packages.yml
+++ b/.github/workflows/shared-packages.yml
@@ -182,10 +182,13 @@ jobs:
           # Create a fresh virtual environment
           uv venv --python ${{ matrix.python-version }}
 
-          uv build "packages/ragbits" --out-dir dist --wheel
+          # Build all packages (component packages + metapackage)
+          for dir in packages/*/; do
+            echo "Building $dir"
+            uv build "$dir" --out-dir dist --wheel
+          done
 
-          # Install packages with their specific extras
-          uv pip install "$(ls dist/ragbits-*.whl)[a2a,azure,chroma,cli,fastembed,fastembed-gpu,gcs,google-drive,hf,local,logfire,mcp,openai,otel,pgvector,promptfoo,qdrant,ray,relari,s3,sql,unstructured,weaviate]"
+          uv pip install --find-links dist  "$(ls dist/ragbits-*.whl)[a2a,azure,chroma,cli,fastembed,fastembed-gpu,gcs,google-drive,hf,local,logfire,mcp,openai,otel,pgvector,promptfoo,qdrant,ray,relari,s3,sql,unstructured,weaviate]"
 
           # Install test dependencies
           uv pip install pytest~=8.3.3 pytest-cov~=5.0.0 pytest-asyncio~=0.24.0 pytest-postgresql~=7.0.1 moto~=4.2.7 aiosqlite~=0.21.0
