--- a/.github/workflows/shared-packages.yml
+++ b/.github/workflows/shared-packages.yml
@@ -115,7 +115,7 @@ jobs:
     strategy:
       fail-fast: false # do not stop all jobs if one fails
       matrix:
-        python-version: [ "3.10", "3.11", "3.12" ]
+        python-version: [ "3.10", "3.11", "3.12", "3.13" ]
 
     services:
       postgres:
