--- a/packages/ragbits/pyproject.toml
+++ b/packages/ragbits/pyproject.toml
@@ -59,9 +59,10 @@ azure=[
 ]
 local = [
     "sentence-transformers>=4.0.2,<5.0.0",
-    "torch>=2.2.1,<3.0.0",
+    "torch>=2.5.0,<3.0.0",
     "transformers>=4.44.2,<5.0.0",
-    "numpy>=1.26.0,<2.0.0",
+    "numpy>=1.26.0,<2.0.0; python_version < '3.13'",
+    "numpy>=2.1.0; python_version >= '3.13'",
     "accelerate>=1.7.0",
 ]
 openai = [
@@ -85,15 +86,15 @@ relari = [
     "continuous-eval>=0.3.12,<1.0.0",
 ]
 fastembed = [
-    "fastembed>=0.4.2,<1.0.0"
+    "fastembed>=0.7.0,<1.0.0"
 ]
 fastembed-gpu = [
-    "fastembed-gpu>=0.4.2,<1.0.0",
+    "fastembed-gpu>=0.7.0,<1.0.0",
 ]
 pgvector = [
     "asyncpg>=0.30.0,<1.0.0",
 ]
-ray = ["ray[data]>=2.43.0,<3.0.0"]
+ray = ["ray[data]>=2.53.0,<3.0.0"]
 unstructured = [
     "unstructured>=0.16.9,<1.0.0",
     "unstructured-client>=0.26.0,<1.0.0",
