--- a/packages/ragbits-core/pyproject.toml
+++ b/packages/ragbits-core/pyproject.toml
@@ -54,13 +54,16 @@ chroma = [
 ]
 local = [
     "sentence-transformers>=4.0.2,<5.0.0",
-    "torch>=2.2.1,<3.0.0",
+    "torch>=2.5.0,<3.0.0",
     "transformers>=4.44.2,<5.0.0",
-    "numpy>=1.26.0,<2.0.0",
+    "numpy>=1.26.0,<2.0.0; python_version < '3.13'",
+    "numpy>=2.1.0; python_version >= '3.13'",
     "accelerate>=1.7.0",
+    "tokenizers>=0.20.0",
 ]
 fastembed = [
-    "fastembed>=0.4.2,<1.0.0"
+    "fastembed>=0.7.0,<1.0.0",
+    "mmh3>=5.0.0"
 ]
 promptfoo = [
     "PyYAML>=6.0.2,<7.0.0",
@@ -80,7 +83,7 @@ pgvector = [
     "asyncpg>=0.30.0,<1.0.0",
 ]
 fastembed-gpu = [
-    "fastembed-gpu>=0.4.2,<1.0.0",
+    "fastembed-gpu>=0.7.0,<1.0.0",
 ]
 azure=[
     "azure-storage-blob>=12.24.1,<13.0.0",
@@ -110,8 +113,8 @@ weaviate = [
     "weaviate-client>=4.15.4,<5.0.0",
 ]
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pre-commit~=3.8.0",
     "pytest~=8.3.3",
     "pytest-cov~=5.0.0",
