--- a/.github/workflows/shared-packages.yml
+++ b/.github/workflows/shared-packages.yml
@@ -106,6 +106,7 @@ jobs:
 
   tests:
     name: Run tests (${{ matrix.install-method }}, Python ${{ matrix.python-version }})
+    needs: lints
     runs-on: ubuntu-latest
     timeout-minutes: 15
     permissions:
@@ -176,35 +177,27 @@ jobs:
           path: ~/nltk_data
           key: nltk-${{ runner.os }}
 
-      - name: Setup environment from built packages
+      - name: Download built packages
         if: matrix.install-method == 'package'
+        uses: actions/download-artifact@v4
+        with:
+          name: packages
+          path: dist
+
+      - name: Run Tests With Coverage (package)
+        if: matrix.install-method == 'package'
+        uses: ./.github/actions/test-packages
+        with:
+          python-version: ${{ matrix.python-version }}
+          google-drive-clientid-json: ${{ secrets.GOOGLE_DRIVE_CLIENTID_JSON }}
+          google-source-unit-test-folder: ${{ secrets.GOOGLE_SOURCE_UNIT_TEST_FOLDER }}
+          google-drive-target-email: ${{ secrets.GOOGLE_DRIVE_TARGET_EMAIL }}
+      - name: Run Tests With Coverage (source)
+        if: matrix.install-method == 'source'
         run: |
-          # Create a fresh virtual environment
-          uv venv --python ${{ matrix.python-version }}
-
-          # Build all packages (component packages + metapackage)
-          for dir in packages/*/; do
-            echo "Building $dir"
-            uv build "$dir" --out-dir dist --wheel
-          done
-
-          uv pip install --find-links dist  "$(ls dist/ragbits-*.whl)[a2a,azure,chroma,cli,fastembed,fastembed-gpu,gcs,google-drive,hf,local,logfire,mcp,openai,otel,pgvector,promptfoo,qdrant,ray,relari,s3,sql,unstructured,weaviate]"
-
-          uv pip install pyarrow==17.0.0 ray==2.43.0
-
-          # Install test dependencies
-          uv pip install pytest~=8.3.3 pytest-cov~=5.0.0 pytest-asyncio~=0.24.0 pytest-postgresql~=7.0.1 moto~=4.2.7 aiosqlite~=0.21.0
-      - name: Run Tests With Coverage
-        run: |
-          if [ "${{ matrix.install-method }}" = "package" ]; then
-            uv run --no-sync coverage run -m pytest --postgresql-password postgres -v -p no:warnings --junitxml=report.xml
-            uv run --no-sync coverage report
-            uv run --no-sync coverage xml
-          else
-            uv run coverage run -m pytest --postgresql-password postgres -v -p no:warnings --junitxml=report.xml
-            uv run coverage report
-            uv run coverage xml
-          fi
+          uv run coverage run -m pytest --postgresql-password postgres -v -p no:warnings --junitxml=report.xml
+          uv run coverage report
+          uv run coverage xml
         env:
           GOOGLE_DRIVE_CLIENTID_JSON: ${{ secrets.GOOGLE_DRIVE_CLIENTID_JSON }}
           GOOGLE_SOURCE_UNIT_TEST_FOLDER: ${{ secrets.GOOGLE_SOURCE_UNIT_TEST_FOLDER }}
