--- a/.github/workflows/shared-packages.yml
+++ b/.github/workflows/shared-packages.yml
@@ -97,6 +97,11 @@ jobs:
       checks: write
       contents: read
     steps:
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
+        with:
+          version: ${{ vars.UV_VERSION || '0.6.9' }}
+
       - name: Validate package build
         run: |
           for dir in packages/*/; do uv build "$dir" --out-dir dist; done
