fix build stage

--- a/.github/workflows/shared-packages.yml
+++ b/.github/workflows/shared-packages.yml
@@ -97,6 +97,8 @@ jobs:
       checks: write
       contents: read
     steps:
+      - uses: actions/checkout@v4
+
       - name: Install uv
         uses: astral-sh/setup-uv@v2
         with:
