--- a/.github/workflows/shared-packages.yml
+++ b/.github/workflows/shared-packages.yml
@@ -204,7 +204,7 @@ jobs:
             uv pip install --find-links dist \
               "$(ls dist/ragbits-*.whl)[a2a,azure,chroma,cli,fastembed,fastembed-gpu,gcs,google-drive,hf,local,logfire,mcp,openai,otel,pgvector,promptfoo,qdrant,ray,relari,s3,sql,unstructured,weaviate]" \
               docling==2.15.1 torch==2.2.2 pyarrow==17.0.0 ray==2.43.0
-            uv pip install --group dev
+            uv sync --only-group dev
             UV_FLAGS="--no-sync"
           fi
           uv run $UV_FLAGS coverage run -m pytest --postgresql-password postgres -v -p no:warnings --junitxml=report.xml
