--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dev = [
     "pytest~=8.3.3",
     "pytest-cov~=5.0.0",
     "pytest-asyncio~=0.24.0",
+    "pytest-xdist~=3.8.0",
     "pip-licenses>=4.0.0,<5.0.0",
     "mkdocs>=1.6.1",
     "mkdocs-autorefs>=1.2.0",
