--- a/.github/workflows/shared-packages.yml
+++ b/.github/workflows/shared-packages.yml
@@ -2,10 +2,31 @@ name: Shared packages checks
 
 on:
   workflow_call:
+    inputs:
+      install-methods:
+        description: 'JSON array of install methods to test'
+        type: string
+        default: '["source", "package"]'
+
+      artifact-name:
+        description: 'Name of the packages artifact to download'
+        type: string
+        default: 'packages'
+
+      skip-build:
+        description: 'Skip the build job (use when artifact is provided externally)'
+        type: boolean
+        default: false
+
+      skip-lints:
+        description: 'Skip the lints job'
+        type: boolean
+        default: false
 
 jobs:
   lints:
     name: Run linters
+    if: ${{ !inputs.skip-lints }}
     runs-on: ubuntu-latest
     timeout-minutes: 15
     permissions:
@@ -80,14 +101,21 @@ jobs:
             trivy-scanning-results.txt
           retention-days: 30
 
-      - name: Publish Test Report
-        uses: actions/upload-artifact@v4
-        if: always()
-        continue-on-error: true
+  build:
+    name: Run build
+    if: ${{ !inputs.skip-build }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    permissions:
+      checks: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
         with:
-          name: test-report
-          path: report.xml
-          retention-days: 10
+          version: ${{ vars.UV_VERSION || '0.6.9' }}
 
       - name: Validate package build
         run: |
@@ -98,15 +126,14 @@ jobs:
         continue-on-error: true
         if: success()
         with:
-          name: packages
+          name: ${{ inputs.artifact-name }}
           path: dist/**
           retention-days: 3
 
-
-
   tests:
-    name: Run tests (${{ matrix.install-method }}, Python ${{ matrix.python-version }})
-    needs: lints
+    name: Run tests
+    needs: build
+    if: ${{ !cancelled() && (inputs.skip-build || needs.build.result == 'success') }}
     runs-on: ubuntu-latest
     timeout-minutes: 15
     permissions:
@@ -117,7 +144,7 @@ jobs:
       fail-fast: false # do not stop all jobs if one fails
       matrix:
         python-version: [ "3.10", "3.11", "3.12" ]
-        install-method: [ "source", "package" ]
+        install-method: ${{ fromJson(inputs.install-methods) }}
 
     services:
       postgres:
@@ -181,23 +208,23 @@ jobs:
         if: matrix.install-method == 'package'
         uses: actions/download-artifact@v4
         with:
-          name: packages
+          name: ${{ inputs.artifact-name }}
           path: dist
 
-      - name: Run Tests With Coverage (package)
+      - name: Install built packages
         if: matrix.install-method == 'package'
-        uses: ./.github/actions/test-packages
-        with:
-          python-version: ${{ matrix.python-version }}
-          google-drive-clientid-json: ${{ secrets.GOOGLE_DRIVE_CLIENTID_JSON }}
-          google-source-unit-test-folder: ${{ secrets.GOOGLE_SOURCE_UNIT_TEST_FOLDER }}
-          google-drive-target-email: ${{ secrets.GOOGLE_DRIVE_TARGET_EMAIL }}
-      - name: Run Tests With Coverage (source)
-        if: matrix.install-method == 'source'
         run: |
-          uv run coverage run -m pytest --postgresql-password postgres -v -p no:warnings --junitxml=report.xml
-          uv run coverage report
-          uv run coverage xml
+          uv sync --only-group dev
+          uv pip install --find-links dist \
+            "$(ls dist/ragbits-*.whl)[a2a,azure,chroma,cli,fastembed,fastembed-gpu,gcs,google-drive,hf,local,logfire,mcp,openai,otel,pgvector,promptfoo,qdrant,ray,relari,s3,sql,unstructured,weaviate]" \
+            docling==2.15.1 torch==2.2.2 pyarrow==17.0.0 ray==2.43.0
+
+      - name: Run Tests With Coverage
+        run: |
+          UV_FLAGS="${{ matrix.install-method == 'package' && '--no-sync' || '' }}"
+          uv run $UV_FLAGS coverage run -m pytest --postgresql-password postgres -v -p no:warnings --junitxml=report.xml
+          uv run $UV_FLAGS coverage report
+          uv run $UV_FLAGS coverage xml
         env:
           GOOGLE_DRIVE_CLIENTID_JSON: ${{ secrets.GOOGLE_DRIVE_CLIENTID_JSON }}
           GOOGLE_SOURCE_UNIT_TEST_FOLDER: ${{ secrets.GOOGLE_SOURCE_UNIT_TEST_FOLDER }}
